Overview of changes from 1.4.0-alpha to 1.4.0-beta
==
* Fixed
  - XIM bridge
    - Startup error of uim-xim due to the 1.3.x-incompatible behavior of
      uim_scm_symbol_value()

  - uim-scm
    - Fix corrupted return value by uim_scm_return_value() after uim_scm_eval()

Overview of changes from 1.3.0 to 1.4.0-alpha
==
* New features
  - libuim
    - The modified version of SIOD interpreter has been replaced with SigScheme
      0.7.2

* Fixed
  - [CRITICAL] Fix GC crash on SPARC, IA-64, and possibly MIPS, Alpha, m68k, by
    introduction of libgcroots

Overview of changes from 1.3.0-beta to 1.3.0
==
* Fixed
  - XIM bridge
    - Fix compilation on pre-X11R6.7 environment.

Overview of changes from 1.3.0-alpha to 1.3.0-beta
==
* Fixed
  - libuim
    - Minor fix for text acquisition and injection
    - Add caps-lock, scroll-lock, and num-lock keysyms

  - Tcode
  - Try-code
    - Update compose table

  - uim-toolbar-qt
    - Suppress runtime warning when icon files are missing

  - GTK+ bridge
  - Qt bridge
  - XIM bridge
    - Support caps-lock, scroll-lock, and num-lock keysyms
    - Fix page shift behavior

Overview of changes from 1.2.x to 1.3.0-alpha
==
* New features
  - libuim
    - Obsolete experimental surrounding text API
    - Add text acquisition API and support it in GTK+ and Qt bridges
    - Add text injection API (uim_input_string())
    - Support focus-in and focus-out handler in IM context
    - More keysyms support
    - See doc/COMPATIBILITY for further details

  - Anthy
    - Kana keyboard support (experimental)
  - Latin IM
    - Support deadkeys with preedit enabled
  - Try-Code IM
    - New Japanese IM based on T-Code

  - uim_panelapplet
    - New toolbar applet for KDE panel
  - uim-toolbar-gtk
    - Double click to shrink the window (Masatake Yamato)
  - uim-toolbar-qt
    - Double click to shrink the window

  - uim-pref-gtk
  - uim-pref-qt
    - Support more keysyms in key editor

  - GTK+ bridge
  - Qt bridge
  - XIM bridge