@@ -5,8 +5,12 @@ Overview of changes from 1.4.0-alpha to 1.4.0-beta
     - Startup error of uim-xim due to the 1.3.x-incompatible behavior of
       uim_scm_symbol_value()
 
-  - uim-scm
+  - libuim
     - Fix corrupted return value by uim_scm_return_value() after uim_scm_eval()
+
+  - uim-sh
+    - Fix broken 'uim-sh -B' error handling
+    - Fix broken backtrace printing
 
 Overview of changes from 1.3.0 to 1.4.0-alpha
 ==
